jdk.internal.misc.PreviewFeatures: determine via ProcessHandle
Replace the native method with a check via ProcessHandle arguments.